--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   equatable: ^2.0.7
   cached_network_image: ^3.4.1
   palette_generator: ^0.3.3
+  http: ^1.2.2
+  image: ^4.2.0
   auto_route: ^10.2.0
   freezed_annotation: ^2.4.4
   flutter_spinkit: ^5.2.0
@@ -70,6 +72,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - assets/Aurora Text Logo.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
