--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,10 @@ dev_dependencies:
   freezed: ^2.5.5
   json_serializable: ^6.9.3
   auto_route_generator: ^10.2.0
+  bloc_test: ^10.0.0
+  mocktail: ^1.0.4
+  integration_test:
+    sdk: flutter
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
