--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   auto_route: ^10.2.0
   freezed_annotation: ^2.4.4
   flutter_spinkit: ^5.2.0
+  path: ^1.9.0
+  path_provider: ^2.1.4
+  sqflite: ^2.3.3+1
 
 dev_dependencies:
   flutter_test:
