--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   intl: ^0.20.2
   flutter_bloc: ^9.1.1
+  bloc: ^9.1.0
   get_it: ^9.0.5
   dio: ^5.9.0
   equatable: ^2.0.7
