--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,6 +84,7 @@ flutter:
 
   assets:
     - assets/Aurora Text Logo.png
+    - assets/a.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
